--- a/style.css
+++ b/style.css
@@ -2,30 +2,70 @@
     width: 100px;
     height: 100px;
     border: 1px solid red;
+    transition: 1s;
 }
+
+.ex-1-square:hover{
+    background-color: red;
+}
+
 .ex-2-square {
     width: 100px;
     height: 100px;
     background: red;
+    transition: 3s;
 }
+
+.ex-2-square:active{
+    width: 1100px;
+}
+
 .ex-3-square {
     width: 100px;
     height: 100px;
     background: red;
+    transition: 1s;
 }
+
+.ex-3-square:hover{
+    border-radius: 50%;
+}
+
 .ex-4-square {
     width: 100px;
     height: 100px;
     background: red;
+    transition: 2s;
 }
+
+.ex-4-square:hover{
+    background: none;
+}
+
 .ex-5-square {
     margin: 20px;
     width: 60px;
     height: 60px;
     background: red;
+    transition: 3s;
 }
+
+.ex-5-square:hover{
+    width: 100px;
+    height: 100px;
+}
+
+.ex-5-square:active{
+    width: 30px;
+    height: 30px;
+}
+
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
+}
+
+.ex-6-img:hover{
+    
 }
 
 .ex-9-img {
