--- a/style.css
+++ b/style.css
@@ -68,10 +68,36 @@
     filter: grayscale(100);
 }
 
+.ex-7-img{
+    transition: 3s;
+}
+
+.ex-7-img:hover{
+    filter: grayscale(100) blur(3px);
+}
+
+.ex-8-img{
+    transition: 3s;
+}
+
+.ex-8-img:hover{
+    filter: grayscale(100) blur(3px);
+    border-radius: 3rem;
+}
+
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
+    transition: 3s;
 }
+
+.ex-9-img:hover {
+    margin: 0 0;
+    width: 500px;
+    filter: grayscale(100) blur(3px);
+    border-radius: 3rem;
+}
+
 .ex-10-icon {
     font-size: 60px;
 }
