--- a/style.css
+++ b/style.css
@@ -100,7 +100,14 @@
 
 .ex-10-icon {
     font-size: 60px;
+    animation: rotate_360 2s infinite;
 }
+
+@keyframes rotate_360{
+    100%  {transform: rotate(360deg);
+    }
+}
+
 .ex-11-icon {
     font-size: 60px;
 }
