--- a/style.css
+++ b/style.css
@@ -111,6 +111,25 @@
 .ex-11-icon {
     font-size: 60px;
 }
+
+.ex-11-icon:hover{
+    animation: rotate_270 2s infinite;    
+}
+
+@keyframes rotate_270{
+    0%{
+        transform: rotate(0);
+    }
+    
+    75%{
+        transform: rotate(270deg);
+    }
+
+    100%{
+        transform: rotate(0);
+    }
+}
+
 .ex-12-button, .ex-13-button {
     position: relative;
     display: block;
