--- a/style.css
+++ b/style.css
@@ -191,3 +191,68 @@
         right: 10%;
     }
 }
+
+.ex-13-button:hover .ex-13-top-white{
+    animation: top_white_2 4s;
+}
+
+@keyframes top_white_2{
+    0%{
+        top: -10px;
+        left: 10%;
+    }
+
+    20%{
+        top: -10px;
+        left: 170px;
+    }
+
+    40%{
+        top: 60px;
+        left: 170px;
+    }
+    70%{
+        top: 60px;
+        left: -10px;
+    }
+    90%{
+        top: -10px;
+        left: -10px;
+    }
+    100%{
+        top: -10px;
+        left: 10%;
+    }
+}
+
+.ex-13-button:hover .ex-13-bottom-white{
+    animation: bot_white_2 4s;
+}
+
+@keyframes bot_white_2 {
+    0%{
+        bottom: -10px;
+        right: 20%;
+    }
+
+    20%{
+        bottom: -10px;
+        right: 140px;
+    }
+    40%{
+        bottom: 60px;
+        right: 140px;
+    }
+    70%{
+        bottom: 60px;
+        right: -10px;
+    }
+    90%{
+        bottom: -10px;
+        right: -10px;
+    }
+    100%{
+        bottom: -10px;
+        right: 10%;
+    }
+}
